--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">PicPay</string>
-    <string name="title">Contatos</string>
-    <string name="error">Ocorreu um erro. Tente novamente.</string>
+  <string name="app_name">PicPay</string>
+  <string name="title">Contatos</string>
+  <string name="error">Ocorreu um erro. Tente novamente.</string>
+  <string name="try_again">Tente novamente.</string>
 
 </resources>
